# test_task

./: .gitignore  CMakeLists.txt  README.md  client.cpp  commands.txt  conv_client.cpp  conv_server.cpp  hello.cpp  permission_manager.cpp  permission_manager.h  permissions_db.cpp  permissions_db.h  server.cpp  sql_test.cpp  task_3.cpp  time_server.cpp
inc/: permission_manager.h
lib/: permission_manager.cpp  permissions_db.cpp
scripts/: clear_permissions.sh  print_permissions.sh
src/: permission_server.cpp  task_3.cpp  time_server.cpp
